Se añadio el codigo Javascript para las figuras geométricas y se arreglaron algunas lineas del html

--- a/figuras/figuras.html
+++ b/figuras/figuras.html
@@ -41,7 +41,7 @@
                </button>
 
                <label for="inputTriangulo2">
-                ¿Cuánto mide la altura y la base de tu triangulo?
+                ¿Cuánto mide la base y la altura de tu triangulo?
                </label>
                <input id="inputTrianguloBase" type="number" placeholder="Base"/>
                <input id="inputTrianguloAltura" type="number" placeholder="Altura"/>
@@ -56,10 +56,10 @@
                    ¿Cuánto mide el radio de tu círculo?
                </label>
                <input id="inputRadio" type="number"/>
-               <button type="button" onclick="calcularRadio()">
+               <button type="button" onclick="calcularPerimetroCirculo()">
                    Calcular perímetro
                </button>
-               <button type="button" onclick="calcularRadio()">
+               <button type="button" onclick="calcularAreaCirculo()">
                    Calcular el área
                </button>
            </form>
