Código en Javascript terminado, se aplico diseño responsive al css y se hicieron algunas correcciones menores al html

--- a/figuras/figuras.html
+++ b/figuras/figuras.html
@@ -18,6 +18,7 @@
    <section>
        <form class="form">
            <h2 class="form_title">Cuadrado</h2>
+           <img src="https://i.ibb.co/xJQLFkL/Sin-t-tulo.png" alt="cuadrado"/>
             <label class="form_label" for="inputCuadrado">
                ¿Cuánto mide cada lado de tu cuadrado?
             </label>
@@ -35,15 +36,16 @@
             </div>
 
             <div class="details">
-                <p id="result_Cuadrado">Resultado: </p>
+                <p id="result_Cuadrado"></p>
             </div>
 
         </form>
         
         <form class="form">
-             <h2 class="form_title">Triangulo</h2>
+             <h2 class="form_title">Triángulo</h2>
+             <img src="https://i.ibb.co/kQPsJdm/triangulo.png" alt="Triangulo"/>
              <label class="form_label for="inputTriangulo">
-                ¿Cuales son las medidas de tu triangulo?
+                ¿Cuales son las medidas de tu triángulo?
             </label>
 
             <div class="form_container_triangulo">
@@ -62,13 +64,14 @@
             </div>
 
             <div class="details">
-                <p id="result_Triangulo">Resultado: </p>
+                <p id="result_Triangulo"></p>
             </div>
 
         </form>
         
         <form class="form">
-            <h2 class="form_title">Circulo</h2>
+            <h2 class="form_title">Círculo</h2>
+            <img src="https://i.ibb.co/sCnHbzZ/circulo.png" alt="circulo"/>
             <label class="form_label for="inputRadio">
                 ¿Cuánto mide el radio de tu círculo?
             </label>
@@ -86,7 +89,7 @@
             </div>
 
             <div class="details">
-                <p id="result_Circulo">Resultado: </p>
+                <p id="result_Circulo"></p>
             </div>
         </form>
    </section>
